Fixed toast creating whitespace, added close functionality to outside click on modal

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -660,8 +660,8 @@ input[type=number] {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    position: -webkit-sticky;
-    position: sticky;
+  
+    position: fixed;
     width: 18rem;
     height: 5rem;
     top: 10rem;
